# transcriber

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  TODO.md  package-lock.json  package.json
docs/: index.html
python/: diarizer.py  downloader.py  extractor.py  fetch_bins.ps1  logger.py  main.py  requirements.txt  transcriber.py  transcriber.spec
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
