[package]
name = "transcriber"
version = "1.0.1"
edition = "2021"

[lib]
name = "transcriber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "transcriber"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                      = { version = "2", features = [] }
tauri-plugin-notification  = "2"
tauri-plugin-store         = "2"
serde                      = { version = "1", features = ["derive"] }
serde_json                 = "1"
rfd                        = "0.14"   # нативный файловый диалог
